# parameter-golf

./: .gitignore  pyproject.toml  train_gpt.py  train_gpt_mlx.py  train_gpt_mlx_sparse.py  train_gpt_sparse.py
parameter_golf_looped_ablations_bundle (0)/: LOOPED_DECODER_ABLATION_TEST_PLAN.md  manifest.json  train_gpt_mlx_current_record.py  train_gpt_mlx_loop_attnres_loopq.py  train_gpt_mlx_loop_base.py  train_gpt_mlx_loop_xsa.py  train_gpt_mlx_loop_xsa_attnres_loopq.py  train_gpt_mlx_loop_xsa_attnres_loopq_gate.py  train_gpt_mlx_loop_xsa_attnres_loopq_prevblocks.py  train_gpt_mlx_sp8192_loop_xsa.py  train_gpt_mlx_sp8192_loop_xsa_attnres_loopq.py  train_gpt_mlx_sp8192_loop_xsa_attnres_loopq_gate.py  train_gpt_mlx_sp8192_loop_xsa_attnres_loopq_prevblocks.py
parameter_golf_looped_full_attnres_ablations_bundle (1)/: FULL_ATTNRES_LOOPED_DECODER_TEST_PLAN.md  manifest.json  train_gpt_mlx_loop_fullattnres_loopq.py  train_gpt_mlx_loop_xsa_fullattnres_loopq.py  train_gpt_mlx_loop_xsa_fullattnres_loopq_gate.py  train_gpt_mlx_loop_xsa_fullattnres_loopq_prevsummary.py
parameter_golf_looped_full_attnres_identity_mlx_bundle (2)/: FULL_ATTNRES_IDENTITY_TEST_PLAN.md  IDENTITY_IMPLEMENTATION_NOTES.md  manifest.json  train_gpt_mlx_loop_fullattnres_loopq.py  train_gpt_mlx_loop_stable.py  train_gpt_mlx_loop_xsa_fullattnres_loopq.py  train_gpt_mlx_loop_xsa_fullattnres_loopq_gate.py  train_gpt_mlx_loop_xsa_fullattnres_loopq_prevsummary.py
parameter_golf_looped_full_attnres_mlx_optimized_bundle (3)/: FULL_ATTNRES_LOOPED_DECODER_TEST_PLAN.md  OPTIMIZATION_NOTES.md  manifest.json  (+4 more)
(+2 files in other folders)
